# tcia-cohort-forge

./: .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_STATE.md  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docs/: DEMO_MEDIA.md
scripts/: generate_demo_media.py
src/tcia_cohort_forge/: cli.py  client.py  cohort.py  config.py  downloader.py  exporter.py  models.py
tests/: test_cli.py  test_client.py  test_cohort.py  test_config.py  test_downloader.py  test_exporter.py  test_models.py
