[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tcia-cohort-forge"
version = "0.1.0"
description = "CLI tool to query, browse, and download patient cohorts from The Cancer Imaging Archive (TCIA)"
authors = [{ name = "Abinav Katuru", email = "akaturu@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
    "httpx>=0.27",
]
optional-dependencies = { dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "mypy>=1.8"], media = ["Pillow>=10", "imageio>=2.34", "imageio-ffmpeg>=0.5", "numpy>=1.26"] }

[project.urls]
Homepage = "https://github.com/AKaturu/tcia-cohort-forge"
Source = "https://github.com/AKaturu/tcia-cohort-forge"

[project.scripts]
tcia-cohort-forge = "tcia_cohort_forge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"
